# ai-engineering-labs

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: block_env_access.sh
.github/workflows/: ci.yml
01_openai/: .gitignore  README.md  pyproject.toml
01_openai/notebooks/: openai_quick_reference.ipynb  provider_comparison_openai.ipynb  structured_output_deep_dive.ipynb
01_openai/scripts/: 01_basic_openai_calls.py  02_structured_output_scenarios.py  03_function_calling_scenarios.py  04_tool_calling_scenarios.py  05_streaming_scenarios.py  06_token_cost_tracking.py  07_conversation_state_and_costs.py  08_error_handling_scenarios.py  09_multimodal_inputs.py  10_embeddings_scenarios.py  11_image_generation_scenarios.py  12_audio_scenarios.py  13_video_scenarios.py  14_model_comparison_scenarios.py  15_reusable_prompt_scenarios.py  16_recursive_structured_output_scenarios.py  17_moderation_structured_output_scenarios.py  openai_client.py
02_anthropic/: README.md  pyproject.toml
02_anthropic/cli_project/: README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
02_anthropic/cli_project/core/: chat.py  claude.py  cli.py  cli_chat.py  tools.py
02_anthropic/inputs/documents/: dataset.json
02_anthropic/notebooks/: 00_notebook_basic_API.ipynb  01_prompt_evals.ipynb  01_prompt_evals_fns.ipynb  01_prompt_evals_grader.ipynb  02_prompting.ipynb  03_text_editor_tool.ipynb  03_tool_streaming.ipynb  03_tools.ipynb  03_tools_multi_turns.ipynb  03_tools_using_multiple_tools.ipynb  03_web_search.ipynb  04_bm25.ipynb  04_chunking.ipynb  04_embeddings.ipynb  04_hybrid.ipynb  04_vectordb.ipynb  05_caching.ipynb  05_citations.ipynb  05_code_execution.ipynb  05_images.ipynb  05_pdf.ipynb  05_thinking.ipynb  anthropic_quick_reference.ipynb
02_anthropic/outputs/: output.html  output.json
02_anthropic/scripts/: anthropic_client.py
03_google_ai/: README.md  pyproject.toml
03_google_ai/notebooks/: 00_quickstart_gemini.ipynb  01_model_configuration_and_safety.ipynb  02_chat_and_streaming.ipynb  03_file_api_and_long_context.ipynb  04_multimodality_deep_dive.ipynb  05_structured_outputs_and_reliability.ipynb  06_function_calling_and_tools.ipynb  07_code_execution_tool.ipynb  08_prompt_evaluation_and_grading.ipynb  09_model_comparison_benchmarks.ipynb  10_multimodal_live_interactions.ipynb  11_advanced_optimization.ipynb  12_token_management_and_costs.ipynb  13_batch_api_processing.ipynb  14_controlled_generation.ipynb
03_google_ai/scripts/: gemini_client.py  test_gemini_client.py
04_multi_provider/: PROJECT_STATE.md  README.md  demo.ipynb  pyproject.toml
04_multi_provider/docs/specs/: 2026-04-14-multi-provider-llm-client.md
04_multi_provider/llm_client/: __init__.py  anthropic_provider.py  base.py  cost_tracker.py  gemini_provider.py  openai_provider.py  router.py
04_multi_provider/tests/: conftest.py
04_multi_provider/tests/integration/: test_providers.py
04_multi_provider/tests/unit/: test_cost_tracker.py  test_fallback.py  test_router.py
05_rag_langchain/: .gitignore  01_embeddings_basics.ipynb  02_chromadb_indexing.ipynb  03_rag_pipeline.ipynb  04_rag_evaluation.ipynb  PROJECT_STATE.md  README.md  pyproject.toml
05_rag_langchain/app/: app.py  config.py  ingest.py  query.py
05_rag_langchain/docs/specs/: 2026-04-28-05-rag-langchain.md
05_rag_langchain/tests/: conftest.py
05_rag_langchain/tests/integration/: conftest.py  test_pipeline.py
05_rag_langchain/tests/unit/: test_ingest.py  test_query.py
06_langgraph_deep_agents/: PROJECT_STATE.md  README.md  app.py  comparison.ipynb  pyproject.toml
06_langgraph_deep_agents/data/: leads.json
06_langgraph_deep_agents/deep_agents/: demo.ipynb
06_langgraph_deep_agents/deep_agents/agent/: agent.py
06_langgraph_deep_agents/docs/specs/: 2026-05-04-commercial-agent-langgraph-deep-agents.md
06_langgraph_deep_agents/langgraph/: demo.ipynb
06_langgraph_deep_agents/langgraph/agent/: agent.py  state.py
06_langgraph_deep_agents/shared/: config.py  leads_store.py  state.py  tools.py
06_langgraph_deep_agents/tests/: conftest.py
06_langgraph_deep_agents/tests/integration/: test_deep_agents_agent.py  test_langgraph_agent.py
06_langgraph_deep_agents/tests/unit/: test_config.py  test_leads_store.py  test_tools.py
07_local_models_privacy_first/: 01_ollama_setup.ipynb  02_advanced_capabilities.ipynb  03_tool_calling.ipynb  04_vision.ipynb  05_local_rag.ipynb  06_benchmark.ipynb  PROJECT_STATE.md  README.md  pyproject.toml
07_local_models_privacy_first/app/: app.py  chat.py
07_local_models_privacy_first/data/: contoso_report_q4_2024.md  generate_vision_assets.py
07_local_models_privacy_first/docs/specs/: 2026-05-12-07-local-models-privacy-first.md
07_local_models_privacy_first/tests/integration/: test_ollama.py
07_local_models_privacy_first/tests/unit/: test_chat.py  test_helpers.py
07_local_models_privacy_first/utils/: helpers.py
