[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-provider-llm-client"
version = "0.1.0"
description = "Reusable async Python module abstracting OpenAI, Anthropic, and Gemini behind a common interface."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.95.0",
    "openai>=2.31.0",
    "google-genai>=1.73.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring real API keys (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
