[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-deep-agents"
version = "0.1.0"
description = "Commercial assistant agent — LangGraph (low-level) vs Deep Agents (high-level)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.1.10",
    "deepagents>=0.5.6",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
    "langchain-google-genai>=4.2.2",
    "langsmith>=0.8.0",
    "streamlit>=1.57.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "grandalf>=0.8",
]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests requiring a real LLM (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
