[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-models-privacy-first"
version = "0.1.0"
description = "Privacy-first AI with local models via Ollama — structured outputs, tool calling, vision, RAG, and a 6-model benchmark."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.2",
    "faiss-cpu>=1.13.2",
    "pydantic>=2.12.5",
    "streamlit>=1.57.0",
    "litellm>=1.83.14",
    "pandas>=3.0.3",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.5.7",
    "ipywidgets>=8.1.8",
]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "app*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests requiring a running Ollama instance (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
